# jsonschema2db

./: .dockerignore  .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  jsonschema2db.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
docs/: Makefile  changelog.rst  conf.py  index.rst  readme.rst
jsonschema2db/: __init__.py
scripts/: setup.py
src/jsonschema2ddl/: __init__.py  converters.py
test/: conftest.py  test.py  test_main.py  test_pp_to_def.json  test_refs.json  test_schema.json  test_time_schema.json
