[tool.poetry]
name = "jsonschema2ddl"
version = "0.0.0"
description = "Convert jsonschema to SQL tables"
authors = ["Pablo San José <pablo.sanjose@clarity.ai>"]

[tool.poetry.scripts]
vscode = "scripts.setup:vscode"

[tool.poetry.dependencies]
python = "^3.7"
change_case = "^0.5.2"
iso8601 = "^0.1.12"
psycopg2 = "^2.7.2"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyscaffold = "^3.2a0<3.3a0<"
flake8 = "^3.8.3"
autopep8 = "^1.4.4"
pytest-cov = "2.7.1"
Sphinx = "~2.3.1"
sphinx-rtd-theme = "0.5.0"
m2r2 = "0.2.5"
rope = "~0.17.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
